added steps describing method to cook carbonara

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -26,4 +26,28 @@
       <li>20g (0.7 oz) (4 tsp) pecorino Romano</li>
       <li>2g (1/2 tsp) pepper, freshly ground</li>
   </ul>
+  
+  <h2>Steps</h2>
+    <ol>
+      <li>Cut off the rind and the pepper layer. Then, cut the guanciale into 1 cm (0.4”) slices, 
+      stack them, and cut into 1 cm (0.4”) cubes.</li>
+      <li>To a large bowl, add the egg yolks, the freshly ground pepper, the Grana Padano, 
+      and the pecorino Romano. Mix with a whisk until well blended.</li>
+      <li>Add the guanciale to a heated cast iron pan (no oil, butter, or fat added), 
+      then sauté over high heat, tossing the guanciale as you do, making sure it browns on all sides. 
+      Once the guanciale starts to smoke and fry, lower the heat so it does not burn. 
+      Let it cook in its fat until crispy on the outside and soft on the inside.</li>
+      <li>When the guanciale is done, drain the rendered fat into a heatproof bowl, 
+      and let both the fat and the guanciale cool to room temperature.</li>
+      <li>Cook the spaghetti according to package directions — they should be just shy of al dente 
+      when done as they will continue to cook with the sauce later.</li>
+      <li>Add some of the rendered fat from the guanciale to the bowl with egg yolks and mix. 
+      Then, transfer the spaghetti into the bowl, add a ladle of pasta water to the bowl, place the 
+      said bowl over a water bath, and constantly stir until the sauce thickens.</li>
+      <li>Remove from the water bath and add the guanciale and toss to combine.</li>
+      <li>Transfer to warmed plates, taking care each portion has equal amounts of guanciale. 
+      Then, sprinkle each portion of carbonara with freshly ground pepper and pecorino Romano. 
+      Serve immediately, or the sauce will dry out and become sticky.</li>
+    </ol>
+  </ul>
 </html>
