Added body elements

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -5,6 +5,8 @@
       <title>Odin Recipes</title>       
   </head>
   
+  <body>
+      
   <h1>Carbonara</h1>
   <img src="../recipes/carbonara.jpg" alt="a black bowl of carbonara on a wooden table">
   
@@ -50,4 +52,6 @@
       Serve immediately, or the sauce will dry out and become sticky.</li>
     </ol>
   </ul>
+
+  </body>
 </html>
