--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
       <title>Odin Recipes</title>       
   </head>
   
+  <body>
+
   <h1>Odin Recipes</h1>
 
   <a href="./recipes/carbonara.html">Carbonara</a>
-
+  <a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a>
+  
+  </body>
 
 </html>
