--- a/recipes/chicken-chorizo.html
+++ b/recipes/chicken-chorizo.html
@@ -7,7 +7,7 @@
 
   <body>
   <h1>Chicken and Chorizo Rice</h1>
-  <img src="../recipes/chicken-chorizo.png">
+  <img src="../recipes/chicken-chorizo.png" alt="A skillet of Chicken,Rice and Chorizo">
 
   <h2>An easy one-pot dish</h2>
   <p>A Cajun-inspired rice pot recipe with spicy Spanish sausage,
