--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   
   <body>
 
-  <h1>Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
 
-  <a href="./recipes/carbonara.html">Carbonara</a>
-  <a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a>
-  
+    <a href="./recipes/carbonara.html">Carbonara</a>
+    <a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a>
+    <a href="./recipes/smash-burgers.html">Smash Burgers</a>
+
   </body>
 
 </html>
