--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <body>
 
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/carbonara.html">Carbonara</a>
-    <a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a>
-    <a href="./recipes/smash-burgers.html">Smash Burgers</a>
-
+    
+    <ul>
+      <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+      <li><a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a></li>
+      <li><a href="./recipes/smash-burgers.html">Smash Burgers</a></li>
+    </ul>
   </body>
 
 </html>
