--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <title>Odin Recipes</title>       
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
+</head>
   
-  <body>
+<body>
 
-    <h1>Odin Recipes</h1>
+  <h1>Odin Recipes</h1>
     
-    <ul>
-      <li><a href="./recipes/carbonara.html">Carbonara</a></li>
-      <li><a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a></li>
-      <li><a href="./recipes/smash-burgers.html">Smash Burgers</a></li>
-    </ul>
-  </body>
+  <ul>
+    <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+    <li><a href="./recipes/chicken-chorizo.html">Chicken and Chorizo Rice</a></li>
+    <li><a href="./recipes/smash-burgers.html">Smash Burgers</a></li>
+  </ul>
+</body>
 
 </html>
