Tidied indentation and added CSS link

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Odin Recipes</title>       
-  </head>
-  
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <h1>Carbonara</h1>
-    <img src="../recipes/carbonara.jpg" alt="a black bowl of carbonara on a wooden table">
-  
-    <h2>An Italian Favourite</h2>
-    <p>Carbonara is an Italian pasta dish from Rome made with eggs, hard cheese, cured pork,
-    and black pepper. The dish arrived at its modern form, with its current name, in the middle of 
-    the 20th century.
-    <p>The cheese is usually Pecorino Romano, Parmigiano-Reggiano, or a combination of the two.
-    Spaghetti is the most common pasta, but fettuccine, rigatoni, linguine, or bucatini are also used. 
-    Normally guanciale or pancetta are used for the meat component, but lardons of smoked bacon are a 
-    common substitute outside Italy.</p>
+<body>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>280g (9.9 oz) spaghetti</li>
-      <li>4 egg yolks</li>
-      <li>200g guanciale, cured for at least 4 months</li>
-      <li>30g (1.05 oz) (2 tbsp) Grana Padano</li>
-      <li>20g (0.7 oz) (4 tsp) pecorino Romano</li>
-      <li>2g (1/2 tsp) pepper, freshly ground</li>
-    </ul>
-  
-    <h2>Steps</h2>
-    <ol>
-      <li>Cut off the rind and the pepper layer. Then, cut the guanciale into 1 cm (0.4”) slices, 
-      stack them, and cut into 1 cm (0.4”) cubes.</li>
-      <li>To a large bowl, add the egg yolks, the freshly ground pepper, the Grana Padano, 
-      and the pecorino Romano. Mix with a whisk until well blended.</li>
-      <li>Add the guanciale to a heated cast iron pan (no oil, butter, or fat added), 
-      then sauté over high heat, tossing the guanciale as you do, making sure it browns on all sides. 
-      Once the guanciale starts to smoke and fry, lower the heat so it does not burn. 
-      Let it cook in its fat until crispy on the outside and soft on the inside.</li>
-      <li>When the guanciale is done, drain the rendered fat into a heatproof bowl, 
-      and let both the fat and the guanciale cool to room temperature.</li>
-      <li>Cook the spaghetti according to package directions — they should be just shy of al dente 
-      when done as they will continue to cook with the sauce later.</li>
-      <li>Add some of the rendered fat from the guanciale to the bowl with egg yolks and mix. 
-      Then, transfer the spaghetti into the bowl, add a ladle of pasta water to the bowl, place the 
-      said bowl over a water bath, and constantly stir until the sauce thickens.</li>
-      <li>Remove from the water bath and add the guanciale and toss to combine.</li>
-      <li>Transfer to warmed plates, taking care each portion has equal amounts of guanciale. 
-      Then, sprinkle each portion of carbonara with freshly ground pepper and pecorino Romano. 
-      Serve immediately, or the sauce will dry out and become sticky.</li>
-    </ol>
+  <h1>Carbonara</h1>
+  <img src="../recipes/carbonara.jpg" alt="a black bowl of carbonara on a wooden table">
 
-  </body>
+  <h2>An Italian Favourite</h2>
+  <p>Carbonara is an Italian pasta dish from Rome made with eggs, hard cheese, cured pork,
+  and black pepper. The dish arrived at its modern form, with its current name, in the middle of 
+  the 20th century.
+  <p>The cheese is usually Pecorino Romano, Parmigiano-Reggiano, or a combination of the two.
+  Spaghetti is the most common pasta, but fettuccine, rigatoni, linguine, or bucatini are also used. 
+  Normally guanciale or pancetta are used for the meat component, but lardons of smoked bacon are a 
+  common substitute outside Italy.</p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>280g (9.9 oz) spaghetti</li>
+    <li>4 egg yolks</li>
+    <li>200g guanciale, cured for at least 4 months</li>
+    <li>30g (1.05 oz) (2 tbsp) Grana Padano</li>
+    <li>20g (0.7 oz) (4 tsp) pecorino Romano</li>
+    <li>2g (1/2 tsp) pepper, freshly ground</li>
+  </ul>
+
+  <h2>Steps</h2>
+  <ol>
+    <li>Cut off the rind and the pepper layer. Then, cut the guanciale into 1 cm (0.4”) slices, 
+    stack them, and cut into 1 cm (0.4”) cubes.</li>
+    <li>To a large bowl, add the egg yolks, the freshly ground pepper, the Grana Padano, 
+    and the pecorino Romano. Mix with a whisk until well blended.</li>
+    <li>Add the guanciale to a heated cast iron pan (no oil, butter, or fat added), 
+    then sauté over high heat, tossing the guanciale as you do, making sure it browns on all sides. 
+    Once the guanciale starts to smoke and fry, lower the heat so it does not burn. 
+    Let it cook in its fat until crispy on the outside and soft on the inside.</li>
+    <li>When the guanciale is done, drain the rendered fat into a heatproof bowl, 
+    and let both the fat and the guanciale cool to room temperature.</li>
+    <li>Cook the spaghetti according to package directions — they should be just shy of al dente 
+    when done as they will continue to cook with the sauce later.</li>
+    <li>Add some of the rendered fat from the guanciale to the bowl with egg yolks and mix. 
+    Then, transfer the spaghetti into the bowl, add a ladle of pasta water to the bowl, place the 
+    said bowl over a water bath, and constantly stir until the sauce thickens.</li>
+    <li>Remove from the water bath and add the guanciale and toss to combine.</li>
+    <li>Transfer to warmed plates, taking care each portion has equal amounts of guanciale. 
+    Then, sprinkle each portion of carbonara with freshly ground pepper and pecorino Romano. 
+    Serve immediately, or the sauce will dry out and become sticky.</li>
+  </ol>
+
+</body>
 
 </html>
