Tidied indentation and added CSS link

--- a/recipes/chicken-chorizo.html
+++ b/recipes/chicken-chorizo.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Odin Recipes</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  <body>
-      
-    <h1>Chicken and Chorizo Rice</h1>
-    <img src="../recipes/chicken-chorizo.png" alt="A skillet of Chicken,Rice and Chorizo">
+<body>
+    
+  <h1>Chicken and Chorizo Rice</h1>
+  <img src="../recipes/chicken-chorizo.png" alt="A skillet of Chicken,Rice and Chorizo">
 
-    <h2>An easy one-pot dish</h2>
-    <p>A Cajun-inspired rice pot recipe with spicy Spanish sausage,
-    sweet peppers and tomatoes.</p>
+  <h2>An easy one-pot dish</h2>
+  <p>A Cajun-inspired rice pot recipe with spicy Spanish sausage,
+  sweet peppers and tomatoes.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 tbsp olive oil</li>
-      <li>2 chicken breasts, chopped</li>
-      <li>1 onion, diced</li>
-      <li>1 red pepper, thinly sliced</li>
-      <li>2 garlic cloves, crushed</li>
-      <li>75g chorizo, sliced</li>
-      <li>1 tbsp Cajun seasoning</li>
-      <li>250g long grain rice</li>
-      <li>400g can plum tomato</li>
-      <li>350ml chicken stock</li>
-    </ul>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 tbsp olive oil</li>
+    <li>2 chicken breasts, chopped</li>
+    <li>1 onion, diced</li>
+    <li>1 red pepper, thinly sliced</li>
+    <li>2 garlic cloves, crushed</li>
+    <li>75g chorizo, sliced</li>
+    <li>1 tbsp Cajun seasoning</li>
+    <li>250g long grain rice</li>
+    <li>400g can plum tomato</li>
+    <li>350ml chicken stock</li>
+  </ul>
 
-    <h2>Steps</h2>
-    <ol>
-      <li>Heat 1 tbsp olive oil in a large frying pan with a lid and brown 2 chopped 
-      chicken breasts for 5-8 mins until golden.</li>
-      <li>Remove and set aside. Tip in the 1 diced onion and cook for 3-4 mins until soft.</li>
-      <li>Add 1 thinly sliced red pepper, 2 crushed garlic cloves, 75g sliced chorizo and 
-      1 tbsp Cajun seasoning, and cook for 5 mins more.</li>
-      <li>Stir the chicken back in with 250g long grain rice, add the 400g can of tomatoes
-      and 350ml chicken stock. Cover and simmer for 20-25 mins until the rice is tender.</li>
-    </ol>
+  <h2>Steps</h2>
+  <ol>
+    <li>Heat 1 tbsp olive oil in a large frying pan with a lid and brown 2 chopped 
+    chicken breasts for 5-8 mins until golden.</li>
+    <li>Remove and set aside. Tip in the 1 diced onion and cook for 3-4 mins until soft.</li>
+    <li>Add 1 thinly sliced red pepper, 2 crushed garlic cloves, 75g sliced chorizo and 
+    1 tbsp Cajun seasoning, and cook for 5 mins more.</li>
+    <li>Stir the chicken back in with 250g long grain rice, add the 400g can of tomatoes
+    and 350ml chicken stock. Cover and simmer for 20-25 mins until the rice is tender.</li>
+  </ol>
 
-  </body>
+</body>
 
 </html>
